fix dialog z-index

--- a/src/assets/less/common.less
+++ b/src/assets/less/common.less
@@ -13,7 +13,6 @@ body {
   text-align: center;
   background-color: #e8e7ea;
   color: #2c3e50;
-  height: 1000px;
   >header {
     width: 100%;
     font-size: 0;
@@ -353,6 +352,7 @@ body {
 .mask {
   z-index: 15;
   &__bg {
+    z-index: 16;
     width: 100%;
     height: 100%;
     position: fixed;
@@ -361,7 +361,7 @@ body {
     background-color: rgba(226, 226, 226, .85)
   }
   &__content {
-    z-index: 16;
+    z-index: 17;
     width: 35rem;
     height: 20rem;
     position: fixed;
